# SolarSim

./: #README.txt#  #SolarSim.cc#  .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  run.mac  run_test.mac  verbose.mac  viscolor.mac
.ipynb_checkpoints/: README-checkpoint.txt  SolarSim-checkpoint.cc  Untitled-checkpoint.ipynb  debug-checkpoint.mac  run_4eV-checkpoint.mac  solar_spectrum-checkpoint.mac  vis-checkpoint.mac
include/: DetectorConstruction.hh  MyPhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SensitiveDetector.hh  TrackingAction.hh
include/.ipynb_checkpoints/: ActionInitialization-checkpoint.hh  EventAction-checkpoint.hh  SteppingAction-checkpoint.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Run.cc  SensitiveDetector.cc  TrackingAction.cc
src/.ipynb_checkpoints/: #DetectorConstruction-checkpoint.cc#  ActionInitialization-checkpoint.cc  MyPhysicsList-checkpoint.cc  PrimaryGeneratorAction-checkpoint.cc  RunAction-checkpoint.cc  SteppingAction-checkpoint.cc  TrackingAction-checkpoint.cc
